# generative_ner

./: README.md  default.conf  pyproject.toml
configs/: config.yaml  config_gpt.yaml
shell/finetune/: finetune_meta.sh
shell/fintune/: finetune_meta.sh
shell/zeroshot/: zeroshot.sh  zeroshot_chat.sh
src/: __init__.py  argparser.py  eval.py  pred.py  preprocessor.py  train.py
src/cli/: run.py  run_batchapi.py  run_gpt.py
src/data/: __init__.py  preprocessor.py
src/evaluation/: __init__.py  eval.py
src/gpt/: __init__.py  cost.py  openai_api.py  utils.py
src/gpt/base/: templates.py  utils.py
src/prediction/: __init__.py  pred.py
src/training/: __init__.py
tests/: test_preprocessor.py
